Ajout des schémas

--- a/E_Filles_Project/E_Filles_Project.csproj
+++ b/E_Filles_Project/E_Filles_Project.csproj
@@ -131,6 +131,20 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Schemas\1-Schéma général.drawio" />
+    <Content Include="Schemas\2-Architecture Physique.drawio" />
+    <Content Include="Schemas\3-Diagramme API Dark Project.drawio" />
+    <Content Include="Schemas\4-VerifierLicenceQualifier.drawio" />
+    <Content Include="Schemas\5-OrdoProd.drawio" />
+    <Content Include="Schemas\6-Module de production.drawio" />
+    <Content Include="Schemas\modele efile.drawio" />
+    <Content Include="Schemas\Projet Plumsail\1-Schéma général.drawio" />
+    <Content Include="Schemas\Projet Plumsail\2-Architecture Physique.drawio" />
+    <Content Include="Schemas\Projet Plumsail\3-Diagramme API Dark Project.drawio" />
+    <Content Include="Schemas\Projet Plumsail\4-VerifierLicenceQualifier.drawio" />
+    <Content Include="Schemas\Projet Plumsail\5-OrdoProd.drawio" />
+    <Content Include="Schemas\Projet Plumsail\6-Module de production.drawio" />
+    <Content Include="Schemas\Tous les schémas en un.drawio" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
